# Rosalind-rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
R/string_algorithms/: dna.r  rna.r
inputs/: ba1a.txt  ba1b.txt  ba1c.txt  ba1d.txt  ba1e.txt  cons.txt  dna.txt  fibd.txt  gc.txt  grph.txt  hamm.txt  iev.txt  iprb.txt  kmer.txt  lcsm.txt  lexv.txt  mprt.txt  mrna.txt  orf.txt  prot.txt  prtm.txt  revc.txt  revp.txt  rna.txt  splc.txt  subs.txt  trans.txt
src/: lib.rs  main.rs
src/algorithmic_heights/: fibo.rs  mod.rs
src/bioinformatics_stronghold/: cons.rs  dna.rs  fib.rs  fibd.rs  gc.rs  grph.rs  hamm.rs  iev.rs  iprb.rs  kmer.rs  lcsm.rs  lexf.rs  lexv.rs  lia.rs  mod.rs  mprt.rs  mrna.rs  orf.rs  perm.rs  prot.rs  prtm.rs  revc.rs  revp.rs  rna.rs  sign.rs  splc.rs  subs.rs  trans.rs
src/bioinformatics_textbook/: ba1a.rs  ba1b.rs  ba1c.rs  ba1d.rs  ba1e.rs  mod.rs  tmp.rs
src/string_algorithms/: dna.rs  revc.rs  rna.rs
src/utils/: mod.rs  template.rs
