[package]
name = "rosalind-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.4.1"
protein-translate = "0.2.0"
regex = "1"
bio = "0.41.0"
statrs = "0.15"
curl = "0.4.43"
itertools = "0.10"